SimpleBench/ThssDB/src/main/java/cn/edu/thssdb/parser/SQLParser.java
// Generated from D:/code/dataBase/bigwork/parser/ThssDB/src/main/java/cn/edu/thssdb/parser\SQL.g4
// by ANTLR 4.9.1
package cn.edu.thssdb.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int T__0 = 1,
      T__1 = 2,
      T__2 = 3,
      T__3 = 4,
      T__4 = 5,
      EQ = 6,
      NE = 7,
      LT = 8,
      GT = 9,
      LE = 10,
      GE = 11,
      ADD = 12,
      SUB = 13,
      MUL = 14,
      DIV = 15,
      AND = 16,
      OR = 17,
      T_INT = 18,
      T_LONG = 19,
      T_FLOAT = 20,
      T_DOUBLE = 21,
      T_STRING = 22,
      K_ADD = 23,
      K_ALL = 24,
      K_AS = 25,
      K_BY = 26,
      K_BEGIN = 27,
      K_COLUMN = 28,
      K_COMMIT = 29,
      K_CREATE = 30,
      K_DATABASE = 31,
      K_DATABASES = 32,
      K_DELETE = 33,
      K_DISTINCT = 34,
      K_DROP = 35,
      K_EXISTS = 36,
      K_FROM = 37,
      K_GRANT = 38,
      K_IF = 39,
      K_IDENTIFIED = 40,
      K_INSERT = 41,
      K_INTO = 42,
      K_JOIN = 43,
      K_KEY = 44,
      K_NOT = 45,
      K_NULL = 46,
      K_ON = 47,
      K_PRIMARY = 48,
      K_QUIT = 49,
      K_REVOKE = 50,
      K_SELECT = 51,
      K_SET = 52,
      K_SHOW = 53,
      K_TABLE = 54,
      K_TABLES = 55,
      K_TO = 56,
      K_TRANSACTION = 57,
      K_UPDATE = 58,
      K_USE = 59,
      K_USER = 60,
      K_VALUES = 61,
      K_VIEW = 62,
      K_WHERE = 63,
      IDENTIFIER = 64,
      NUMERIC_LITERAL = 65,
      EXPONENT = 66,
      STRING_LITERAL = 67,
      SINGLE_LINE_COMMENT = 68,
      MULTILINE_COMMENT = 69,
      SPACES = 70;
  public static final int RULE_parse = 0,
      RULE_sql_stmt_list = 1,
      RULE_sql_stmt = 2,
      RULE_begin_transaction_stmt = 3,
      RULE_commit_stmt = 4,
      RULE_create_db_stmt = 5,
      RULE_drop_db_stmt = 6,
      RULE_create_user_stmt = 7,
      RULE_drop_user_stmt = 8,
      RULE_create_table_stmt = 9,
      RULE_show_meta_stmt = 10,
      RULE_grant_stmt = 11,
      RULE_revoke_stmt = 12,
      RULE_use_db_stmt = 13,
      RULE_delete_stmt = 14,
      RULE_drop_table_stmt = 15,
      RULE_show_db_stmt = 16,
      RULE_quit_stmt = 17,
      RULE_show_table_stmt = 18,
      RULE_insert_stmt = 19,
      RULE_value_entry = 20,
      RULE_select_stmt = 21,
      RULE_create_view_stmt = 22,
      RULE_drop_view_stmt = 23,
      RULE_update_stmt = 24,
      RULE_column_def = 25,
      RULE_type_name = 26,
      RULE_column_constraint = 27,
      RULE_multiple_condition = 28,
      RULE_condition = 29,
      RULE_comparer = 30,
      RULE_comparator = 31,
      RULE_expression = 32,
      RULE_table_constraint = 33,
      RULE_result_column = 34,
      RULE_table_query = 35,
      RULE_auth_level = 36,
      RULE_literal_value = 37,
      RULE_column_full_name = 38,
      RULE_database_name = 39,
      RULE_table_name = 40,
      RULE_user_name = 41,
      RULE_column_name = 42,
      RULE_view_name = 43,
      RULE_password = 44;

  private static String[] makeRuleNames() {
    return new String[] {
      "parse",
      "sql_stmt_list",
      "sql_stmt",
      "begin_transaction_stmt",
      "commit_stmt",
      "create_db_stmt",
      "drop_db_stmt",
      "create_user_stmt",
      "drop_user_stmt",
      "create_table_stmt",
      "show_meta_stmt",
      "grant_stmt",
      "revoke_stmt",
      "use_db_stmt",
      "delete_stmt",
      "drop_table_stmt",
      "show_db_stmt",
      "quit_stmt",
      "show_table_stmt",
      "insert_stmt",
      "value_entry",
      "select_stmt",
      "create_view_stmt",
      "drop_view_stmt",
      "update_stmt",
      "column_def",
      "type_name",
      "column_constraint",
      "multiple_condition",
      "condition",
      "comparer",
      "comparator",
      "expression",
      "table_constraint",
      "result_column",
      "table_query",
      "auth_level",
      "literal_value",
      "column_full_name",
      "database_name",
      "table_name",
      "user_name",
      "column_name",
      "view_name",
      "password"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null, "';'", "'('", "','", "')'", "'.'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'+'",
      "'-'", "'*'", "'/'", "'&&'", "'||'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      null,
      null,
      null,
      null,
      null,
      "EQ",
      "NE",
      "LT",
      "GT",
      "LE",
      "GE",
      "ADD",
      "SUB",
      "MUL",
      "DIV",
      "AND",
      "OR",
      "T_INT",
      "T_LONG",
      "T_FLOAT",
      "T_DOUBLE",
      "T_STRING",
      "K_ADD",
      "K_ALL",
      "K_AS",
      "K_BY",
      "K_BEGIN",
      "K_COLUMN",
      "K_COMMIT",
      "K_CREATE",
      "K_DATABASE",
      "K_DATABASES",
      "K_DELETE",
      "K_DISTINCT",
      "K_DROP",
      "K_EXISTS",
      "K_FROM",
      "K_GRANT",
      "K_IF",
      "K_IDENTIFIED",
      "K_INSERT",
      "K_INTO",
      "K_JOIN",
      "K_KEY",
      "K_NOT",
      "K_NULL",
      "K_ON",
      "K_PRIMARY",
      "K_QUIT",
      "K_REVOKE",
      "K_SELECT",
      "K_SET",
      "K_SHOW",
      "K_TABLE",
      "K_TABLES",
      "K_TO",
      "K_TRANSACTION",
      "K_UPDATE",
      "K_USE",
      "K_USER",
      "K_VALUES",
      "K_VIEW",
      "K_WHERE",
      "IDENTIFIER",
      "NUMERIC_LITERAL",
      "EXPONENT",
      "STRING_LITERAL",
      "SINGLE_LINE_COMMENT",
      "MULTILINE_COMMENT",
      "SPACES"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /** @deprecated Use {@link #VOCABULARY} instead. */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "SQL.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public SQLParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class ParseContext extends ParserRuleContext {
    public Sql_stmt_listContext sql_stmt_list() {
      return getRuleContext(Sql_stmt_listContext.class, 0);
    }

    public ParseContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_parse;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).enterParse(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).exitParse(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SQLVisitor)
        return ((SQLVisitor<? extends T>) visitor).visitParse(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ParseContext parse() throws RecognitionException {
    ParseContext _localctx = new ParseContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_parse);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(90);
        sql_stmt_list();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Sql_stmt_listContext extends ParserRuleContext {
    public List<Sql_stmtContext> sql_stmt() {
      return getRuleContexts(Sql_stmtContext.class);
    }

    public Sql_stmtContext sql_stmt(int i) {
      return getRuleContext(Sql_stmtContext.class, i);
    }

    public Sql_stmt_listContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sql_stmt_list;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).enterSql_stmt_list(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).exitSql_stmt_list(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SQLVisitor)
        return ((SQLVisitor<? extends T>) visitor).visitSql_stmt_list(this);
      else return visitor.visitChildren(this);
    }
  }

  public final Sql_stmt_listContext sql_stmt_list() throws RecognitionException {
    Sql_stmt_listContext _localctx = new Sql_stmt_listContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_sql_stmt_list);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
        setState(95);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__0) {
          {
            {
              setState(92);
              match(T__0);
            }
          }
          setState(97);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(98);
        sql_stmt();
        setState(107);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
        while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            {
              {
                setState(100);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                  {
                    {
                      setState(99);
                      match(T__0);
                    }
                  }
                  setState(102);
                  _errHandler.sync(this);
                  _la = _input.LA(1);
                } while (_la == T__0);
                setState(104);
                sql_stmt();
              }
            }
          }
          setState(109);
          _errHandler.sync(this);
          _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
        }
        setState(113);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__0) {
          {
            {
              setState(110);
              match(T__0);
            }
          }
          setState(115);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Sql_stmtContext extends ParserRuleContext {
    public Begin_transaction_stmtContext begin_transaction_stmt() {
      return getRuleContext(Begin_transaction_stmtContext.class, 0);
    }

    public Commit_stmtContext commit_stmt() {
      return getRuleContext(Commit_stmtContext.class, 0);
    }

    public Create_table_stmtContext create_table_stmt() {
      return getRuleContext(Create_table_stmtContext.class, 0);
    }

    public Create_db_stmtContext create_db_stmt() {
      return getRuleContext(Create_db_stmtContext.class, 0);
    }

    public Create_user_stmtContext create_user_stmt() {
      return getRuleContext(Create_user_stmtContext.class, 0);
    }

    public Drop_db_stmtContext drop_db_stmt() {
      return getRuleContext(Drop_db_stmtContext.class, 0);
    }

    public Drop_user_stmtContext drop_user_stmt() {
      return getRuleContext(Drop_user_stmtContext.class, 0);
    }

    public Delete_stmtContext delete_stmt() {
      return getRuleContext(Delete_stmtContext.class, 0);
    }

    public Drop_table_stmtContext drop_table_stmt() {
      return getRuleContext(Drop_table_stmtContext.class, 0);
    }

    public Insert_stmtContext insert_stmt() {
      return getRuleContext(Insert_stmtContext.class, 0);
    }

    public Select_stmtContext select_stmt() {
      return getRuleContext(Select_stmtContext.class, 0);
    }

    public Create_view_stmtContext create_view_stmt() {
      return getRuleContext(Create_view_stmtContext.class, 0);
    }

    public Drop_view_stmtContext drop_view_stmt() {
      return getRuleContext(Drop_view_stmtContext.class, 0);
    }

    public Grant_stmtContext grant_stmt() {
      return getRuleContext(Grant_stmtContext.class, 0);
    }

    public Revoke_stmtContext revoke_stmt() {
      return getRuleContext(Revoke_stmtContext.class, 0);
    }

    public Use_db_stmtContext use_db_stmt() {
      return getRuleContext(Use_db_stmtContext.class, 0);
    }

    public Show_db_stmtContext show_db_stmt() {
      return getRuleContext(Show_db_stmtContext.class, 0);
    }

    public Show_table_stmtContext show_table_stmt() {
      return getRuleContext(Show_table_stmtContext.class, 0);
    }

    public Show_meta_stmtContext show_meta_stmt() {
      return getRuleContext(Show_meta_stmtContext.class, 0);
    }

    public Quit_stmtContext quit_stmt() {
      return getRuleContext(Quit_stmtContext.class, 0);
    }

    public Update_stmtContext update_stmt() {
      return getRuleContext(Update_stmtContext.class, 0);
    }

    public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sql_stmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).enterSql_stmt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).exitSql_stmt(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SQLVisitor)
        return ((SQLVisitor<? extends T>) visitor).visitSql_stmt(this);
      else return visitor.visitChildren(this);
    }
  }

  public final Sql_stmtContext sql_stmt() throws RecognitionException {
    Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_sql_stmt);
    try {
      setState(137);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(116);
            begin_transaction_stmt();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(117);
            commit_stmt();
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(118);
            create_table_stmt();
          }
          break;
        case 4:
          enterOuterAlt(_localctx, 4);
          {
            setState(119);
            create_db_stmt();
          }
          break;
        case 5:
          enterOuterAlt(_localctx, 5);
          {
            setState(120);
            create_user_stmt();
          }
          break;
        case 6:
          enterOuterAlt(_localctx, 6);
          {
            setState(121);
            drop_db_stmt();
          }
          break;
        case 7:
          enterOuterAlt(_localctx, 7);
          {
            setState(122);
            drop_user_stmt();
          }
          break;
        case 8:
          enterOuterAlt(_localctx, 8);
          {
            setState(123);
            delete_stmt();
          }
          break;
        case 9:
          enterOuterAlt(_localctx, 9);
          {
            setState(124);
            drop_table_stmt();
          }
          break;
        case 10:
          enterOuterAlt(_localctx, 10);
          {
            setState(125);
            insert_stmt();
          }
          break;
        case 11:
          enterOuterAlt(_localctx, 11);
          {
            setState(126);
            select_stmt();
          }
          break;
        case 12:
          enterOuterAlt(_localctx, 12);
          {
            setState(127);
            create_view_stmt();
          }
          break;
        case 13:
          enterOuterAlt(_localctx, 13);
          {
            setState(128);
            drop_view_stmt();
          }
          break;
        case 14:
          enterOuterAlt(_localctx, 14);
          {
            setState(129);
            grant_stmt();
          }
          break;
        case 15:
          enterOuterAlt(_localctx, 15);
          {
            setState(130);
            revoke_stmt();
          }
          break;
        case 16:
          enterOuterAlt(_localctx, 16);
          {
            setState(131);
            use_db_stmt();
          }
          break;
        case 17:
          enterOuterAlt(_localctx, 17);
          {
            setState(132);
            show_db_stmt();
          }
          break;
        case 18:
          enterOuterAlt(_localctx, 18);
          {
            setState(133);
            show_table_stmt();
          }
          break;
        case 19:
          enterOuterAlt(_localctx, 19);
          {
            setState(134);
            show_meta_stmt();
          }
          break;
        case 20:
          enterOuterAlt(_localctx, 20);
          {
            setState(135);
            quit_stmt();
          }
          break;
        case 21:
          enterOuterAlt(_localctx, 21);
          {
            setState(136);
            update_stmt();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Begin_transaction_stmtContext extends ParserRuleContext {
    public TerminalNode K_BEGIN() {
      return getToken(SQLParser.K_BEGIN, 0);
    }

    public TerminalNode K_TRANSACTION() {
      return getToken(SQLParser.K_TRANSACTION, 0);
    }

    public Begin_transaction_stmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_begin_transaction_stmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener)
        ((SQLListener) listener).enterBegin_transaction_stmt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener)
        ((SQLListener) listener).exitBegin_transaction_stmt(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SQLVisitor)
        return ((SQLVisitor<? extends T>) visitor).visitBegin_transaction_stmt(this);
      else return visitor.visitChildren(this);
    }
  }

  public final Begin_transaction_stmtContext begin_transaction_stmt() throws RecognitionException {
    Begin_transaction_stmtContext _localctx = new Begin_transaction_stmtContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_begin_transaction_stmt);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(139);
        match(K_BEGIN);
        setState(140);
        match(K_TRANSACTION);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Commit_stmtContext extends ParserRuleContext {
    public TerminalNode K_COMMIT() {
      return getToken(SQLParser.K_COMMIT, 0);
    }

    public Commit_stmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_commit_stmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).enterCommit_stmt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).exitCommit_stmt(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SQLVisitor)
        return ((SQLVisitor<? extends T>) visitor).visitCommit_stmt(this);
      else return visitor.visitChildren(this);
    }
  }

  public final Commit_stmtContext commit_stmt() throws RecognitionException {
    Commit_stmtContext _localctx = new Commit_stmtContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_commit_stmt);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(142);
        match(K_COMMIT);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Create_db_stmtContext extends ParserRuleContext {
    public TerminalNode K_CREATE() {
      return getToken(SQLParser.K_CREATE, 0);
    }

    public TerminalNode K_DATABASE() {
      return getToken(SQLParser.K_DATABASE, 0);
    }

    public Database_nameContext database_name() {
      return getRuleContext(Database_nameContext.class, 0);
    }

    public Create_db_stmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_create_db_stmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).enterCreate_db_stmt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).exitCreate_db_stmt(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SQLVisitor)
        return ((SQLVisitor<? extends T>) visitor).visitCreate_db_stmt(this);
      else return visitor.visitChildren(this);
    }
  }

  public final Create_db_stmtContext create_db_stmt() throws RecognitionException {
    Create_db_stmtContext _localctx = new Create_db_stmtContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_create_db_stmt);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(144);
        match(K_CREATE);
        setState(145);
        match(K_DATABASE);
        setState(146);
        database_name();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Drop_db_stmtContext extends ParserRuleContext {
    public TerminalNode K_DROP() {
      return getToken(SQLParser.K_DROP, 0);
    }

    public TerminalNode K_DATABASE() {
      return getToken(SQLParser.K_DATABASE, 0);
    }

    public Database_nameContext database_name() {
      return getRuleContext(Database_nameContext.class, 0);
    }

    public TerminalNode K_IF() {
      return getToken(SQLParser.K_IF, 0);
    }

    public TerminalNode K_EXISTS() {
      return getToken(SQLParser.K_EXISTS, 0);
    }

    public Drop_db_stmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_drop_db_stmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).enterDrop_db_stmt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).exitDrop_db_stmt(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof SQLVisitor)
        return ((SQLVisitor<? extends T>) visitor).visitDrop_db_stmt(this);
      else return visitor.visitChildren(this);
    }
  }

  public final Drop_db_stmtContext drop_db_stmt() throws RecognitionException {
    Drop_db_stmtContext _localctx = new Drop_db_stmtContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_drop_db_stmt);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(148);
        match(K_DROP);
        setState(149);
        match(K_DATABASE);
        setState(152);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == K_IF) {
          {
            setState(150);
            match(K_IF);
            setState(151);
            match(K_EXISTS);
          }
        }

        setState(154);
        database_name();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Create_user_stmtContext extends ParserRuleContext {
    public TerminalNode K_CREATE() {
      return getToken(SQLParser.K_CREATE, 0);
    }

    public TerminalNode K_USER() {
      return getToken(SQLParser.K_USER, 0);
    }

    public User_nameContext user_name() {
      return getRuleContext(User_nameContext.class, 0);
    }

    public TerminalNode K_IDENTIFIED() {
      return getToken(SQLParser.K_IDENTIFIED, 0);
    }

    public TerminalNode K_BY() {
      return getToken(SQLParser.K_BY, 0);
    }

    public PasswordContext password() {
      return getRuleContext(PasswordContext.class, 0);
    }

    public Create_user_stmtContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_create_user_stmt;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof SQLListener) ((SQLListener) listener).enterCreate_user_stmt(this);
    }
